--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <p class="next_to">3 kick breast drill</p>
     <p class="next_to shift_small">breaststroke kick on back</p>
 	<h3> backstroke </h3>
-    <p class="next_to">backstroke pull</p>
+    <p class="next_to">backstroke pull(with buoy)</p>
     <p class="next_to shift_small">under water backstroke</p>
     <p class="next_to">butterfly kick on back</p>
     <p class="next_to shift_small">breaststroke kick on back</p>
