--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       stroke = prompt('What is the stroke (1)All (2)freestyle (3)backstroke (4)breaststroke (5)butterfly')-1;
       type_swim = prompt("do you want you (1) improve your sprint and endurance(with less drills) or (2) swimming postures(more drills) or (3) custom ammount of drills.(type the number)");
       if (type_swim==='3'){
-	      drill_length = prompt("how much yards of drills?(no more then "+ drills[stroke].length*100+')')/100
+	      drill_length = prompt("how much yards of drills?(no more then "+ drills[stroke].length*100+')')
       } else {
       	drill_length = type_swim*200
       }
@@ -128,7 +128,7 @@
       
         if (test_length < drill_length+50) {
           for (let i = 0; i < Math.floor(test_length/100); i++) {
-            rand = Math.round((drills[stroke].length)*Math.random());
+            rand = Math.floor((drills[stroke].length)*Math.random());
             document.getElementById("text").innerText += '\n100 ' + drills[stroke][rand];
             drills[stroke].splice(rand,1);
           }
