--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
       margin-right: auto;
       text_align: center;
     }
-
+	@media (min-width:1500px) {
+		.shift_big {
+			margin-left: 25vw;
+		}
+	}
 	@media (min-width:767px) and (max-width: 956px) {
 
       .shift_normal {
