--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     }
     button {
       width:100px;
-      padding:10px;
+      box-sizing: border-box;
+      border-radius:2px;
       color:blue;
       background-color:white;
     }
