--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
       text-align:center;
     }
     button {
-      width:100px;
+
       box-sizing: border-box;
+      width:100px;
+      padding:0px;
       border-radius:2px;
       color:blue;
       background-color:white;
