--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 
       box-sizing: border-box;
       width:100px;
+      height:40px;
       padding:0px;
-      border-radius:2px;
+      border-radius:10px;
       color:blue;
       background-color:white;
     }
