--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     	clear:both;
     }
     body {
-      
       background-position: top;
-
       background-size: 2000px;
       background-image: url("https://media.istockphoto.com/id/136694824/photo/athlete-swimming-freestyle-on-blue-background-underwater-view.jpg?s=170667a&w=0&k=20&c=SjYzgysN5p7mRVF_ztDPWgfTRKhXsCiA-QxrOQE_q2k=")
     }
@@ -57,12 +55,12 @@
     }
    
     .next_to {
-	  
-      height:80px;
-      width:100px;
+      box-sizing: border-box;  
+      height:100px;
+      width:120px;
       background-color:blue;
       float:left;
-      border: 20px;
+      border: 10px;
       border-style: solid;
       border-color: rgb(0,0,0);
       color:white;
