--- a/index.html
+++ b/index.html
@@ -195,31 +195,31 @@
   <p id="text">Your set: </p>
   <button onclick="show_drills()">show/hide drills</button>
   <div id="drills">
-  	<h2> Drills used </h2>
+  	<h2> Drills used (click to learn more)</h2>
     <h3> freestyle </h3>
-  	<p class="next_to shift_small shift_big"> fist drill </p>
-  	<p class="next_to"> zipper drill </p>
-  	<p class="next_to shift_small"> head up drill </p>
-  	<p class="next_to"> drag finger tips drill </p>
-  	<p class="next_to shift_small shift_normal"> with fins drill </p>
+  	<p class="next_to shift_small shift_big" onclick="alert('Use your fist instead of your palm')"> fist drill </p>
+  	<p class="next_to" onclick="alert('when swinging your arms, you should tap your hips, shoulders, and then head')"> zipper drill </p>
+  	<p class="next_to shift_small" onclick="alert('bring your head up')"> head up drill </p>
+  	<p class="next_to" onclick="alert('drag your fingertips when you bring your arm forward)"> drag finger tips drill </p>
+  	<p class="next_to shift_small shift_normal" onclick="alert('Use fins in freestyle')"> with fins drill </p>
     <h3> butterfly </h3>
-  	<p class="next_to shift_big"> 1 hand butterfly drill </p>
-  	<p class="next_to shift_small"> 2-2-2 drill </p>
-  	<p class="next_to"> freestyle kick and butterfly hand drill </p>
-  	<p class="next_to shift_small"> with buoy drill </p>
-  	<p class="next_to shift_normal"> butterfly fist drill </p>
+  	<p class="next_to shift_big" onclick="alert('do butterfly with one hand')"> 1 hand butterfly drill </p>
+  	<p class="next_to shift_small" onclick="alert('do 2 butterfly pulls with 1 hand and 2 with the other and then do two normally')"> 2-2-2 drill </p>
+  	<p class="next_to" onclick="alert('do freestyle kick while doing butterfly arms')"> freestyle kick and butterfly hand drill </p>
+  	<p class="next_to shift_small" onclick="alert('do butterfly with pool buoy')"> with buoy drill </p>
+  	<p class="next_to shift_normal" onclick="alert('use your fist instead of your pal when doing butterfly')"> butterfly fist drill </p>
     <h3> breaststroke </h3>
-    <p class="next_to shift_big"> cobra strike drill </p>
-    <p class="next_to">butterfly kick breast arms</p>
-    <p class="next_to shift_small">heal tag drill</p>
-    <p class="next_to">3 kick breast drill</p>
-    <p class="next_to shift_small shift_normal">breaststroke kick on back</p>
+    <p class="next_to shift_big" onclick="alert('do breaststroke pull with a butterfly kick to bring your legs up')"> cobra strike drill </p>
+    <p class="next_to" onclick="alert('do breaststroke and do 1 butterfly kick')">butterfly kick breast arms</p>
+    <p class="next_to shift_small" onclick="alert('put your arms on your heal in breaststroke')">heal tag drill</p>
+    <p class="next_to" onclick="alert('do 3 kick before doing breaststroke pull')">3 kick breast drill</p>
+    <p class="next_to shift_small shift_normal" onclick="alert('do breaststroke kick on back')">breaststroke kick on back</p>
 	<h3> backstroke </h3>
-    <p class="next_to shift_big">backstroke pull(with buoy)</p>
-    <p class="next_to shift_small">under water backstroke</p>
-    <p class="next_to">butterfly kick on back</p>
-    <p class="next_to shift_small">breaststroke kick on back</p>
-    <p class="next_to shift_normal">windmill drill</p>
+    <p class="next_to shift_big" onclick="alert('do backstroke pull with a buoy')">backstroke pull(with buoy)</p>
+    <p class="next_to shift_small" onclick="alert('do backstroke under water')">under water backstroke</p>
+    <p class="next_to" onclick="alert('do underwater dolphin kick on back')">butterfly kick on back</p>
+    <p class="next_to shift_small" onclick="alert('do breastroke pull on your back)">breaststroke kick on back</p>
+    <p class="next_to shift_normal" onclick="alert('swing your arms as fast as possible')">windmill drill</p>
   </div>
 </body>
 </html>
