--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   	<p class="next_to shift_small shift_big" onclick="alert('Use your fist instead of your palm')"> fist drill </p>
   	<p class="next_to" onclick="alert('when swinging your arms, you should tap your hips, shoulders, and then head')"> zipper drill </p>
   	<p class="next_to shift_small" onclick="alert('bring your head up')"> head up drill </p>
-  	<p class="next_to" onclick="alert('drag your fingertips when you bring your arm forward)"> drag finger tips drill </p>
+  	<p class="next_to" onclick="alert('drag your fingertips when you bring your arm forward')"> drag finger tips drill </p>
   	<p class="next_to shift_small shift_normal" onclick="alert('Use fins in freestyle')"> with fins drill </p>
     <h3> butterfly </h3>
   	<p class="next_to shift_big" onclick="alert('do butterfly with one hand')"> 1 hand butterfly drill </p>
