--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   	<p class="next_to shift_small" onclick="alert('do 2 butterfly pulls with 1 hand and 2 with the other and then do two normally')"> 2-2-2 drill </p>
   	<p class="next_to" onclick="alert('do freestyle kick while doing butterfly arms')"> freestyle kick and butterfly hand drill </p>
   	<p class="next_to shift_small" onclick="alert('do butterfly with pool buoy')"> with buoy drill </p>
-  	<p class="next_to shift_normal" onclick="alert('use your fist instead of your pal when doing butterfly')"> butterfly fist drill </p>
+  	<p class="next_to shift_normal" onclick="alert('use your fist instead of your palm when doing butterfly')"> butterfly fist drill </p>
     <h3> breaststroke </h3>
     <p class="next_to shift_big" onclick="alert('do breaststroke pull with a butterfly kick to bring your legs up')"> cobra strike drill </p>
     <p class="next_to" onclick="alert('do breaststroke and do 1 butterfly kick')">butterfly kick breast arms</p>
