--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
       margin-left:auto;
       margin-right:auto;
     }
+    .set_length {
+    	margin:auto;
+    }
+    input {
+        width:80%;
+    	margin:auto;
+    }
     .first {
       
       text-align:center;
@@ -31,7 +38,6 @@
       text-align:center;
     }
     button {
-
       box-sizing: border-box;
       width:100px;
       height:40px;
@@ -116,8 +122,7 @@
       fast_swims = [["100 free","25x4 fly","100 breast","100 back","100 IM","100 Frim","4x25 free sprint","100 pull","50x2 fly"],['100 free','4x25 free sprint','100 pull','100 Frim'],['100 back','100 IM','100 Frim'],['100 breast','100 Frim','100 IM'],['50x2 fly','25x4 fly','100 IM','100 free(relax)','100 fly','100 IM']];
       drills = [["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill","1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill","cobra strike drill","3 kick breast drill","heal tag drill","butterfly kick breast arms","under water dolphin kick","backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"],["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill"],["backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"],["cobra strike drill","3 kick breast drill","butterfly kick breast arms","heal tag drill","breaststroke kick on back"],["1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill"]];
       document.getElementById("text").innerText = 'Your set:';
-      set_length = Number(prompt('What is the length of the set(minimum of 400)'));
-      if (set_length > 400) {
+      set_length = Math.round(Number(document.getElementById('length').value)/25)*25;
       stroke = prompt('What is the stroke (1)All (2)freestyle (3)backstroke (4)breaststroke (5)butterfly')-1;
       type_swim = prompt("do you want you (1) improve your sprint and endurance(with 2 drills) or (2) swimming postures(with 4 drills) or (3) custom ammount of drills.(type the number)");
       if (type_swim==='3'){
@@ -182,14 +187,19 @@
 	
       }
       }
-      } else {
-	      alert('The Set is to short');
-      }
+
+    }
+    function display(obj) {
+    	document.getElementById("the_text").innerText = Math.round(obj.value/25)*25
     }
     
   </script>
   <div class="first">
     <h1 style="color:white"> Swimming set generator </h1>
+    <h2 style="color:white"> Set Length </h2>
+    <input type='range' onclick="display(this)" min='400' max='15000' id='length'></input>
+    <br>
+    <p class="set_length" id="the_text"></p>
     <button onclick="start()"> create swimming set </button>
   </div>
   <p id="text">Your set: </p>
