--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       margin-right:auto;
     }
     .set_length {
+        color:white;
+		font-size:18px;
     	margin:auto;
     }
     input {
