--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       }
       test_length = set_length;
       warm_up = (3+Math.round(Math.random()))*50;
-      document.getElementById("text").innerText += '\n'+warm_up.toString() + " warm up";
+      document.getElementById("text").innerText += '\n'+warm_up.toString() + " Warm Up";
       test_length = test_length-warm_up;
       document.getElementById("text").innerText += '\n200 kick';
       test_length = test_length-200;
@@ -184,7 +184,7 @@
         
 	}
 	if (test_length > 0) {
-      		document.getElementById("text").innerText += '\n'+(test_length).toString()+' cool down';
+      		document.getElementById("text").innerText += '\n'+(test_length).toString()+' Cool Down';
 	}
             
 	
