--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       border-style: solid;
       border-color: rgb(0,0,0);
       color:white;
+      margin-top:10px;
       
     }
     h2 {
@@ -210,29 +211,29 @@
   <div id="drills">
   	<h2> Drills used (click to learn more)</h2>
     <h3> freestyle </h3>
-  	<p class="next_to shift_small shift_big" onclick="alert('Use your fist instead of your palm')"> fist drill </p>
-  	<p class="next_to" onclick="alert('when swinging your arms, you should tap your hips, shoulders, and then head')"> zipper drill </p>
-  	<p class="next_to shift_small" onclick="alert('bring your head up')"> head up drill </p>
-  	<p class="next_to" onclick="alert('drag your fingertips when you bring your arm forward')"> drag finger tips drill </p>
-  	<p class="next_to shift_small shift_normal" onclick="alert('Use fins in freestyle')"> with fins drill </p>
+  	<div class="next_to shift_small shift_big" onclick="alert('Use your fist instead of your palm')"> fist drill <a href="https://www.youtube.com/watch?v=HH0TlKA-UFU">video</a></div>
+  	<div class="next_to" onclick="alert('when swinging your arms, you should tap your hips, shoulders, and then head')"> zipper drill <a href="https://www.youtube.com/watch?v=Ul_By69Mc8Y">video</a></div>
+  	<div class="next_to shift_small" onclick="alert('bring your head up')"> head up drill <a href="https://www.youtube.com/watch?v=nYVH4TVNDLY">video</a></div>
+  	<div class="next_to" onclick="alert('drag your fingertips when you bring your arm forward')"> drag finger tips drill <a href="https://www.youtube.com/watch?v=Bt1hdL89dM0">video</a></div>
+  	<div class="next_to shift_small shift_normal" onclick="alert('Use fins in freestyle')"> with fins drill <a href="https://www.youtube.com/watch?v=8fGiNwlnS0g">video</a></div>
     <h3> butterfly </h3>
-  	<p class="next_to shift_big" onclick="alert('do butterfly with one hand')"> 1 hand butterfly drill </p>
-  	<p class="next_to shift_small" onclick="alert('do 2 butterfly pulls with 1 hand and 2 with the other and then do two normally')"> 2-2-2 drill </p>
-  	<p class="next_to" onclick="alert('do freestyle kick while doing butterfly arms')"> freestyle kick and butterfly hand drill </p>
-  	<p class="next_to shift_small" onclick="alert('do butterfly with pool buoy')"> with buoy drill </p>
+  	<div class="next_to shift_big" onclick="alert('do butterfly with one hand')"> 1 hand butterfly drill <a href="https://www.youtube.com/watch?v=Zj77HGobUjI">video</a> </div>
+  	<div class="next_to shift_small" onclick="alert('do 2 butterfly pulls with 1 hand and 2 with the other and then do two normally')"> 2-2-2 drill </div>
+  	<div class="next_to" onclick="alert('do freestyle kick while doing butterfly arms')"> freestyle kick and butterfly hand drill </div>
+  	<div class="next_to shift_small" onclick="alert('do butterfly with pool buoy')"> with buoy drill </div>
   	<p class="next_to shift_normal" onclick="alert('use your fist instead of your palm when doing butterfly')"> butterfly fist drill </p>
     <h3> breaststroke </h3>
-    <p class="next_to shift_big" onclick="alert('do breaststroke pull with a butterfly kick to bring your legs up')"> cobra strike drill </p>
-    <p class="next_to" onclick="alert('do breaststroke and do 1 butterfly kick')">butterfly kick breast arms</p>
-    <p class="next_to shift_small" onclick="alert('put your arms on your heal in breaststroke')">heal tag drill</p>
-    <p class="next_to" onclick="alert('do 3 kick before doing breaststroke pull')">3 kick breast drill</p>
-    <p class="next_to shift_small shift_normal" onclick="alert('do breaststroke kick on back')">breaststroke kick on back</p>
+    <div class="next_to shift_big" onclick="alert('do breaststroke pull with a butterfly kick to bring your legs up')"> cobra strike drill </div>
+    <div class="next_to" onclick="alert('do breaststroke and do 1 butterfly kick')">butterfly kick breast arms</div>
+    <div class="next_to shift_small" onclick="alert('put your arms on your heal in breaststroke')">heal tag drill</div>
+    <div class="next_to" onclick="alert('do 3 kick before doing breaststroke pull')">3 kick breast drill</div>
+    <div class="next_to shift_small shift_normal" onclick="alert('do breaststroke kick on back')">breaststroke kick on back</div>
 	<h3> backstroke </h3>
-    <p class="next_to shift_big" onclick="alert('do backstroke pull with a buoy')">backstroke pull(with buoy)</p>
-    <p class="next_to shift_small" onclick="alert('do backstroke under water')">under water backstroke</p>
-    <p class="next_to" onclick="alert('do underwater dolphin kick on back')">butterfly kick on back</p>
-    <p class="next_to shift_small" onclick="alert('do breastroke pull on your back)">breaststroke kick on back</p>
-    <p class="next_to shift_normal" onclick="alert('swing your arms as fast as possible')">windmill drill</p>
+    <div class="next_to shift_big" onclick="alert('do backstroke pull with a buoy')">backstroke pull(with buoy)</div>
+    <div class="next_to shift_small" onclick="alert('do backstroke under water')">under water backstroke</div>
+    <div class="next_to" onclick="alert('do underwater dolphin kick on back')">butterfly kick on back</div>
+    <div class="next_to shift_small" onclick="alert('do breastroke pull on your back)">breaststroke kick on back</div>
+    <div class="next_to shift_normal" onclick="alert('swing your arms as fast as possible')">windmill drill</div>
   </div>
 </body>
 </html>
