--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     }
    
     .next_to {
+      overflow:auto;
       box-sizing: border-box;  
       height:100px;
       width:120px;
@@ -218,9 +219,9 @@
   	<div class="next_to shift_small shift_normal" onclick="alert('Use fins in freestyle')"> with fins drill <a href="https://www.youtube.com/watch?v=8fGiNwlnS0g">video</a></div>
     <h3> butterfly </h3>
   	<div class="next_to shift_big" onclick="alert('do butterfly with one hand')"> 1 hand butterfly drill <a href="https://www.youtube.com/watch?v=Zj77HGobUjI">video</a> </div>
-  	<div class="next_to shift_small" onclick="alert('do 2 butterfly pulls with 1 hand and 2 with the other and then do two normally')"> 2-2-2 drill </div>
-  	<div class="next_to" onclick="alert('do freestyle kick while doing butterfly arms')"> freestyle kick and butterfly hand drill </div>
-  	<div class="next_to shift_small" onclick="alert('do butterfly with pool buoy')"> with buoy drill </div>
+  	<div class="next_to shift_small" onclick="alert('do 2 butterfly pulls with 1 hand and 2 with the other and then do two normally')"> 2-2-2 drill <a href="https://www.youtube.com/watch?v=bBGd8ZcWgMU">video</a></div>
+  	<div class="next_to" onclick="alert('Use your whole body when doing dolphin kick')">butterfly flow drill <a href="https://www.youtube.com/watch?v=kHrdE5CG2yc">video</a></div>
+  	<div class="next_to shift_small" onclick="alert('do freestyle kick with butterfly hands')"> freestyle kick butterfly hands <a href=""></div>
   	<p class="next_to shift_normal" onclick="alert('use your fist instead of your palm when doing butterfly')"> butterfly fist drill </p>
     <h3> breaststroke </h3>
     <div class="next_to shift_big" onclick="alert('do breaststroke pull with a butterfly kick to bring your legs up')"> cobra strike drill </div>
