--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   	<div class="next_to shift_big" onclick="alert('do butterfly with one hand')"> 1 hand butterfly drill <a href="https://www.youtube.com/watch?v=Zj77HGobUjI">video</a> </div>
   	<div class="next_to shift_small" onclick="alert('do 2 butterfly pulls with 1 hand and 2 with the other and then do two normally')"> 2-2-2 drill <a href="https://www.youtube.com/watch?v=bBGd8ZcWgMU">video</a></div>
   	<div class="next_to" onclick="alert('Use your whole body when doing dolphin kick')">butterfly flow drill <a href="https://www.youtube.com/watch?v=kHrdE5CG2yc">video</a></div>
-  	<div class="next_to shift_small" onclick="alert('do freestyle kick with butterfly hands')"> freestyle kick butterfly hands <a href="https://www.youtube.com/watch?v=994Tu9BvAIA">video</a></div>
+  	<div class="next_to shift_small" onclick="alert('do freestyle kick with butterfly hands')"> freestyle kick butterfly hands <a href="https://www.youtube.com/shorts/K6F5Bfta_QI">video</a></div>
   	<p class="next_to shift_normal" onclick="alert('use your fist instead of your palm when doing butterfly')"> butterfly fist drill <a href="https://www.youtube.com/shorts/K6F5Bfta_QI">video</a></p>
     <h3> breaststroke </h3>
     <div class="next_to shift_big" onclick="alert('do breaststroke pull with a butterfly kick to bring your legs up')"> cobra strike drill </div>
