--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     * {
       background-clip: content-box;
     }
+    a {
+   		color:yellow;
+    }
     h3 {
     	clear:both;
     }
@@ -150,7 +153,7 @@
     <div class="next_to shift_small" onclick="alert('do breastroke pull on your back)">breaststroke kick on back</div>
     <div class="next_to shift_normal" onclick="alert('swing your arms as fast as possible')">windmill drill</div>
   </div>
-  <footer>
+  <footer style="clear:left">
   Credits to Myswimpro, Fares Ksebati, and SwimLifeGuru
   </footer>
   <script>
