--- a/index.html
+++ b/index.html
@@ -128,25 +128,25 @@
   <button onclick="show_drills()">show/hide drills</button>
   <div id="drills">
   	<h2> Drills used (click to learn more)</h2>
-    <h3> freestyle </h3>
+    <h3> Freestyle </h3>
   	<div class="next_to shift_small shift_big" onclick="alert('Use your fist instead of your palm')"> fist drill <a href="https://www.youtube.com/watch?v=HH0TlKA-UFU">video</a></div>
   	<div class="next_to" onclick="alert('when swinging your arms, you should tap your hips, shoulders, and then head')"> zipper drill <a href="https://www.youtube.com/watch?v=Ul_By69Mc8Y">video</a></div>
   	<div class="next_to shift_small" onclick="alert('bring your head up')"> head up drill <a href="https://www.youtube.com/watch?v=nYVH4TVNDLY">video</a></div>
   	<div class="next_to" onclick="alert('drag your fingertips when you bring your arm forward')"> drag finger tips drill <a href="https://www.youtube.com/watch?v=Bt1hdL89dM0">video</a></div>
   	<div class="next_to shift_small shift_normal" onclick="alert('Use fins in freestyle')"> with fins drill <a href="https://www.youtube.com/watch?v=8fGiNwlnS0g">video</a></div>
-    <h3> butterfly </h3>
+    <h3> Butterfly </h3>
   	<div class="next_to shift_big" onclick="alert('do butterfly with one hand')"> 1 hand butterfly drill <a href="https://www.youtube.com/watch?v=Zj77HGobUjI">video</a> </div>
   	<div class="next_to shift_small" onclick="alert('do 2 butterfly pulls with 1 hand and 2 with the other and then do two normally')"> 2-2-2 drill <a href="https://www.youtube.com/watch?v=bBGd8ZcWgMU">video</a></div>
   	<div class="next_to" onclick="alert('Use your whole body when doing dolphin kick')">butterfly flow drill <a href="https://www.youtube.com/watch?v=kHrdE5CG2yc">video</a></div>
   	<div class="next_to shift_small" onclick="alert('do freestyle kick with butterfly hands')"> freestyle kick butterfly hands <a href="https://www.youtube.com/shorts/K6F5Bfta_QI">video</a></div>
   	<p class="next_to shift_normal" onclick="alert('use your fist instead of your palm when doing butterfly')"> butterfly fist drill <a href="https://www.youtube.com/shorts/K6F5Bfta_QI">video</a></p>
-    <h3> breaststroke </h3>
+    <h3> Breaststroke </h3>
     <div class="next_to shift_big" onclick="alert('do breaststroke pull with a butterfly kick to bring your legs up')"> cobra strike drill </div>
     <div class="next_to" onclick="alert('do breaststroke and do 1 butterfly kick')">butterfly kick breast arms</div>
     <div class="next_to shift_small" onclick="alert('put your arms on your heal in breaststroke')">heal tag drill</div>
     <div class="next_to" onclick="alert('do 3 kick before doing breaststroke pull')">3 kick breast drill</div>
     <div class="next_to shift_small shift_normal" onclick="alert('do breaststroke kick on back')">breaststroke kick on back</div>
-	<h3> backstroke </h3>
+	<h3> Backstroke </h3>
     <div class="next_to shift_big" onclick="alert('do backstroke pull with a buoy')">backstroke pull(with buoy)</div>
     <div class="next_to shift_small" onclick="alert('do backstroke under water')">under water backstroke</div>
     <div class="next_to" onclick="alert('do underwater dolphin kick on back')">butterfly kick on back</div>
