--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
   <div id="drills">
   	<h2> Drills used (click to learn more)</h2>
     <h3> Freestyle </h3>
-  	<div class="next_to shift_small shift_big" onclick="alert('Use your fist instead of your palm')"> fist drill <a href="https://www.youtube.com/watch?v=HH0TlKA-UFU">video</a></div>
-  	<div class="next_to" onclick="alert('when swinging your arms, you should tap your hips, shoulders, and then head')"> zipper drill <a href="https://www.youtube.com/watch?v=Ul_By69Mc8Y">video</a></div>
-  	<div class="next_to shift_small" onclick="alert('bring your head up')"> head up drill <a href="https://www.youtube.com/watch?v=nYVH4TVNDLY">video</a></div>
-  	<div class="next_to" onclick="alert('drag your fingertips when you bring your arm forward')"> drag finger tips drill <a href="https://www.youtube.com/watch?v=Bt1hdL89dM0">video</a></div>
-  	<div class="next_to shift_small shift_normal" onclick="alert('Use fins in freestyle')"> with fins drill <a href="https://www.youtube.com/watch?v=8fGiNwlnS0g">video</a></div>
+  	<div class="next_to shift_small shift_big" onclick="alert('Use your fist instead of your palm')"> fist drill <a href="https://www.youtube.com/watch?v=HH0TlKA-UFU"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a></div>
+  	<div class="next_to" onclick="alert('when swinging your arms, you should tap your hips, shoulders, and then head')"> zipper drill <a href="https://www.youtube.com/watch?v=Ul_By69Mc8Y"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a></div>
+  	<div class="next_to shift_small" onclick="alert('bring your head up')"> head up drill <a href="https://www.youtube.com/watch?v=nYVH4TVNDLY"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a></div>
+  	<div class="next_to" onclick="alert('drag your fingertips when you bring your arm forward')"> drag finger tips drill <a href="https://www.youtube.com/watch?v=Bt1hdL89dM0"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a></div>
+  	<div class="next_to shift_small shift_normal" onclick="alert('Use fins in freestyle')"> with fins drill <a href="https://www.youtube.com/watch?v=8fGiNwlnS0g"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a></div>
     <h3> Butterfly </h3>
-  	<div class="next_to shift_big" onclick="alert('do butterfly with one hand')"> 1 hand butterfly drill <a href="https://www.youtube.com/watch?v=Zj77HGobUjI">video</a> </div>
-  	<div class="next_to shift_small" onclick="alert('do 2 butterfly pulls with 1 hand and 2 with the other and then do two normally')"> 2-2-2 drill <a href="https://www.youtube.com/watch?v=bBGd8ZcWgMU">video</a></div>
-  	<div class="next_to" onclick="alert('Use your whole body when doing dolphin kick')">butterfly flow drill <a href="https://www.youtube.com/watch?v=kHrdE5CG2yc">video</a></div>
-  	<div class="next_to shift_small" onclick="alert('do freestyle kick with butterfly hands')"> freestyle kick butterfly hands <a href="https://www.youtube.com/shorts/K6F5Bfta_QI">video</a></div>
-  	<p class="next_to shift_normal" onclick="alert('use your fist instead of your palm when doing butterfly')"> butterfly fist drill <a href="https://www.youtube.com/shorts/K6F5Bfta_QI">video</a></p>
+  	<div class="next_to shift_big" onclick="alert('do butterfly with one hand')"> 1 hand butterfly drill <a href="https://www.youtube.com/watch?v=Zj77HGobUjI"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a> </div>
+  	<div class="next_to shift_small" onclick="alert('do 2 butterfly pulls with 1 hand and 2 with the other and then do two normally')"> 2-2-2 drill <a href="https://www.youtube.com/watch?v=bBGd8ZcWgMU"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a></div>
+  	<div class="next_to" onclick="alert('Use your whole body when doing dolphin kick')">butterfly flow drill <a href="https://www.youtube.com/watch?v=kHrdE5CG2yc"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a></div>
+  	<div class="next_to shift_small" onclick="alert('do freestyle kick with butterfly hands')"> freestyle kick butterfly hands <a href="https://www.youtube.com/shorts/K6F5Bfta_QI"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a></div>
+  	<p class="next_to shift_normal" onclick="alert('use your fist instead of your palm when doing butterfly')"> butterfly fist drill <a href="https://www.youtube.com/shorts/K6F5Bfta_QI"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a></p>
     <h3> Breaststroke </h3>
     <div class="next_to shift_big" onclick="alert('do breaststroke pull with a butterfly kick to bring your legs up')"> cobra strike drill </div>
     <div class="next_to" onclick="alert('do breaststroke and do 1 butterfly kick')">butterfly kick breast arms</div>
