--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     * {
       background-clip: content-box;
     }
+    img {
+	    width:50px;
+	    length:80px;
+    }
     a {
    		color:yellow;
     }
