--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	    length:80px;
     }
     a {
-	    	clear:both;
+	    clear:both;
     }
     h3 {
     	clear:both;
@@ -43,6 +43,7 @@
     	margin-left: 30vw;
     }
     #drills {
+      float:center;
       height:200px;
       text-align:center;
     }
