--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <div class="first">
     <h1 style="color:white"> Swimming set generator </h1>
     <h2 style="color:white"> Set Length </h2>
-    <input type='range' onclick="display(this)" min='400' max='10000' id='length'></input>
+    <input type='range' onchange="display(this)" min='400' max='10000' id='length'></input>
     <br>
     <p class="set_length" id="the_text"></p>
     <button onclick="start()"> create swimming set </button>
