--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
   <div class="first">
     <h1 style="color:white"> Swimming set generator </h1>
     <h2 style="color:white"> Set Length </h2>
+  	<button onclick="getElementById('length').value+=25; display(getElementById('length'));">increase set length</button>
+    <button onclick="getElementById('length').value-=25; display(getElementById('length'));">decrease set length</button>
     <input type='range' onchange="display(this)" min='400' max='10000' id='length'></input>
     <br>
     <p class="set_length" id="the_text"></p>
@@ -245,6 +247,7 @@
 
     }
     function display(obj) {
+    	alert(Math.round(obj.value/25)*25)
     	document.getElementById("the_text").innerText = Math.round(obj.value/25)*25
     }
     
