--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     }
     button {
       box-sizing: border-box;
+      margin:auto;
       width:100px;
       height:40px;
       padding:0px;
@@ -160,7 +161,7 @@
     <div class="next_to shift_small" onclick="alert('do breastroke pull on your back)">breaststroke kick on back</div>
     <div class="next_to shift_normal" onclick="alert('swing your arms as fast as possible')">windmill drill</div>
   </div>
-  <footer style="clear:left">
+  <footer style="clear:left; color:white; text-align:center;">
   Credits to Myswimpro, Fares Ksebati, and SwimLifeGuru
   </footer>
   <script>
