--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
       margin-right:auto;
     }
     .set_length {
-        color:white;
 	font-size:18px;
     	margin:auto;
     }
     input {
         width:100%;
-    	margin:auto;
+        float:left;
     }
     .first {
       
@@ -48,6 +47,7 @@
       text-align:center;
     }
     button {
+      float:center;
       box-sizing: border-box;
       margin:auto;
       width:100px;
@@ -56,6 +56,7 @@
       border-radius:10px;
       color:blue;
       background-color:white;
+      clear:both;
     }
     #text {
       font-size:30px;
@@ -125,9 +126,9 @@
   <div class="first">
     <h1 style="color:white"> Swimming set generator </h1>
     <h2 style="color:white"> Set Length </h2>
-  	<button onclick="getElementById('length').value+=25; display(getElementById('length'));">increase set length</button>
+  	<button onclick="getElementById('length').value = Number(getElementById('length').value)+25; display(getElementById('length'));">increase set length</button>
     <button onclick="getElementById('length').value-=25; display(getElementById('length'));">decrease set length</button>
-    <input type='range' onchange="display(this)" min='400' max='10000' id='length'></input>
+    <input type='range' onchange="display(this)" min='400' max='10000' id='length'/>
     <br>
     <p class="set_length" id="the_text"></p>
     <button onclick="start()"> create swimming set </button>
