--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <div class="next_to shift_normal" onclick="alert('swing your arms as fast as possible')">windmill drill</div>
   </div>
   <footer style="clear:left; color:white; text-align:center;">
-  Credits to Myswimpro, Fares Ksebati, and SwimLifeGuru
+  Credits to Myswimpro, Fares Ksebati, SwimLifeGuru, and Jarasport
   </footer>
   <script>
     document.getElementById("text").innerText = 'Your set:';
