--- a/index.html
+++ b/index.html
@@ -178,14 +178,14 @@
       }
     }
     function start() {
-      fast_swims = [["100 free","25x4 fly","100 breast","100 back","100 IM","100 Frim","4x25 free sprint","100 pull","50x2 fly"],['100 free','4x25 free sprint','100 pull','100 Frim'],['100 back','100 IM','100 Frim'],['100 breast','100 Frim','100 IM'],['50x2 fly','25x4 fly','100 IM','100 free(relax)','100 fly','100 IM']];
+      fast_swims = [["100 free","25x4 fly","100 breast","100 back","100 IM","100 Frim","4x25 free sprint","100 pull","50x2 fly"],['100 free','4x25 free sprint','100 pull','100 Frim'],['100 back','100 IM','100 Frim'],['100 breast','100 Frim','100 IM'],['50x2 fly','25x4 fly','100 IM','100 free(relax)','100 fly','100 IM'],['100 IM','100 Frim','50x2 IM']];
       drills = [["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill","1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill","cobra strike drill","3 kick breast drill","heal tag drill","butterfly kick breast arms","under water dolphin kick","backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"],["fist drill","zipper drill","head up drill","drag finger tips drill","with fins drill"],["backstroke pull","butterfly kick on back","breaststroke kick on back","backstroke windmill drill"],["cobra strike drill","3 kick breast drill","butterfly kick breast arms","heal tag drill","breaststroke kick on back"],["1 hand butterfly drill","2-2-2 drill","freestyle kick and buttefly hand drill","with buoy drill","butterfly fist drill"]];
       document.getElementById("text").innerText = 'Your set:';
       set_length = Math.round(Number(document.getElementById('length').value)/25)*25;
-      stroke = prompt('What is the stroke (1)All (2)freestyle (3)backstroke (4)breaststroke (5)butterfly')-1;
+      stroke = prompt('What is the stroke (1)All (2)freestyle (3)backstroke (4)breaststroke (5)butterfly (6) IM')-1;
       type_swim = prompt("do you want you (1) improve your sprint and endurance(with 2 drills) or (2) swimming postures(with 4 drills) or (3) custom ammount of drills.(type the number)");
       if (type_swim==='3'){
-	      drill_length = Number(prompt("how much yards of drills?(no more then "+ drills[stroke].length*100+')'))
+	      drill_length = Number(prompt("how much yards of drills?(no more than "+ drills[stroke].length*100+')'))
       } else {
       	drill_length = type_swim*200
       }
