--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
   	<div class="next_to shift_small" onclick="alert('do freestyle kick with butterfly hands')"> freestyle kick butterfly hands <a target="_blank" href="https://www.youtube.com/shorts/K6F5Bfta_QI"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a></div>
   	<p class="next_to shift_normal" onclick="alert('use your fist instead of your palm when doing butterfly')"> butterfly fist drill <a target="_blank" href="https://www.youtube.com/shorts/K6F5Bfta_QI"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a></p>
     <h3> Breaststroke </h3>
-    <div class="next_to shift_big" onclick="alert('do breaststroke pull with a butterfly kick to bring your legs up')"> cobra strike drill </div>
-    <div class="next_to" onclick="alert('do breaststroke and do 1 butterfly kick')">butterfly kick breast arms</div>
+    <div class="next_to shift_big" onclick="alert('do breaststroke pull with a butterfly kick to bring your legs up')"> butterfly kick breast arms <a target="_blank" href="https://www.youtube.com/watch?v=KZxZ7D6w0bk"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a> </div>
+    <div class="next_to" onclick="alert('do freestyle kick with breaststroke arms')">freestyle kick and breast arms <a target="_blank" href="https://www.youtube.com/watch?v=-2-mdGviPHc"><img src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png"></img></a></div>
     <div class="next_to shift_small" onclick="alert('put your arms on your heal in breaststroke')">heal tag drill</div>
     <div class="next_to" onclick="alert('do 3 kick before doing breaststroke pull')">3 kick breast drill</div>
     <div class="next_to shift_small shift_normal" onclick="alert('do breaststroke kick on back')">breaststroke kick on back</div>
