--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@
       height:100px;
       width:120px;
       float:left;
-
       border: 10px;
       border-style: solid;
       border-color: rgb(0,0,0);
       color:white;
       margin-top:10px;
-      
+      border-radius:10px;      
+
+
     }
     h2 {
       margin-left: auto;
@@ -95,12 +96,13 @@
     .current_drill {
     	position:fixed;
         right:10px;
-        top:200px;
+        top:250px;
         text-align:center;
         background-color:white;
-        width:100px;
-        height:150px;
+        width:8vw;
+        height:200px;
     }
+
 	@media (min-width:1500px) {
 		.shift_big {
 			margin-left: 33vw;
@@ -114,7 +116,7 @@
 
     }
 
-	@media (min-width:395px) and (max-width:766px){
+	@media (min-width:395px) and (max-width:767px){
     	      .shift_small {
               clear:left;
               margin-left:30vw;
