--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
   	<a target="_blank" href="https://www.youtube.com/shorts/K6F5Bfta_QI"><div class="next_to shift_small" onmouseover="edit_drill('do freestyle kick with butterfly hands')"> freestyle kick butterfly hands </div></a>
   	<a target="_blank" href="https://www.youtube.com/shorts/K6F5Bfta_QI"><p class="next_to shift_normal" onmouseover="edit_drill('use your fist instead of your palm when doing butterfly')"> butterfly fist drill </p></a>
     <h3> Breaststroke </h3>
-    <a target="_blank" href="https://www.youtube.com/watch?v=KZxZ7D6w0bk"><div class="next_to shift_big" onmouseover="edit_drill('do breaststroke pull with a butterfly kick to bring your legs up')"> butterfly kick breast arms</div></a>
-    <a target="_blank" href="https://www.youtube.com/watch?v=-2-mdGviPHc"><div class="next_to" onmouseover="edit_drill('do freestyle kick with breaststroke arms')">freestyle kick and breast arms </div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=KZxZ7D6w0bk"><div class="next_to shift_big" onmouseover="edit_drill('do breaststroke pull with a butterfly kick to bring your legs up')"> butterfly/kick breast arms</div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=-2-mdGviPHc"><div class="next_to" onmouseover="edit_drill('do freestyle kick with breaststroke arms')">freestyle kick/breast arms </div></a>
     <div class="next_to shift_small" onmouseover="edit_drill('put your arms on your heal in breaststroke')">heal tag drill</div>
     <div class="next_to" onmouseover="edit_drill('do 3 kick before doing breaststroke pull')">3 kick breast drill</div>
     <div class="next_to shift_small shift_normal" onmouseover="edit_drill('do breaststroke kick on back')">breaststroke kick on back</div>
