--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         	margin-left:25vw;
         }
     }
-    @media (max_width:1000px) {
+    @media (max-width:1000px) {
 	    .current_drill {
 		    visibility:hidden;
 	    }
@@ -152,7 +152,7 @@
   <p id="text">Your set: </p>
   <button onclick="show_drills()">show/hide drills</button>
   <div id="drills">
-  	<h2> Drills used (click to learn more)</h2>
+  	<h2> Drills used (hover to learn more)</h2>
     <h3> Freestyle </h3>
   	<a target="_blank" href="https://www.youtube.com/watch?v=HH0TlKA-UFU"><div class="next_to shift_small shift_big" onmouseover="edit_drill('Use your fist instead of your palm')"> fist drill</div></a>
   	<a target="_blank" href="https://www.youtube.com/watch?v=Ul_By69Mc8Y"><div class="next_to" onmouseover="edit_drill('when swinging your arms, you should tap your hips, shoulders, and then head')"> zipper drill </div></a>
