--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     .current_drill {
     	position:fixed;
         right:10px;
-        top:250px;
+        top:500px;
         text-align:center;
         background-color:white;
         width:8vw;
@@ -129,9 +129,14 @@
         	margin-left:25vw;
         }
     }
-    @media (max-width:1000px) {
+    @media (max-width:1100px) {
 	    .current_drill {
 		    visibility:hidden;
+	    }
+    }
+    @media (min-width:1400px) {
+	    .current_drill {
+            width:15vw;
 	    }
     }
   </style>
