--- a/index.html
+++ b/index.html
@@ -73,13 +73,15 @@
    
     .next_to {
       background-image:url("https://cdn-icons-png.flaticon.com/256/1384/1384060.png");
+      background-position:center;
+      background-repeat:no-repeat;
       background-size:100px;
 	  background-color:blue;
       box-sizing: border-box;  
-      height:100px;
-      width:120px;
+      height:108px;
+      width:128px;
       float:left;
-      border: 10px;
+      border: 2px;
       border-style: solid;
       border-color: rgb(0,0,0);
       color:white;
