--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
         	margin-left:25vw;
         }
     }
-	.current_drill {
-    	visiblity:hidden;
+    .current_drill {
+    	visibility:hidden;
     }
     #drills:hover + p {
-    	visibility:none;
+    	visibility:visible;
     }
     @media (min-width:1400px) {
 	    .current_drill {
