--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
     <h3> Breaststroke </h3>
     <a target="_blank" href="https://www.youtube.com/watch?v=KZxZ7D6w0bk"><div class="next_to shift_big" onmouseover="edit_drill('do breaststroke pull with a butterfly kick to bring your legs up')"> butterfly/kick breast arms</div></a>
     <a target="_blank" href="https://www.youtube.com/watch?v=-2-mdGviPHc"><div class="next_to" onmouseover="edit_drill('do freestyle kick with breaststroke arms')">free kick/breast arms </div></a>
-    <div class="next_to shift_small" onmouseover="edit_drill('put your arms on your heal in breaststroke')">heal tag drill</div>
-    <div class="next_to" onmouseover="edit_drill('do 3 kick before doing breaststroke pull')">3 kick breast drill</div>
-    <div class="next_to shift_small shift_normal" onmouseover="edit_drill('do breaststroke kick on back')">breaststroke kick on back</div>
+    <a target="_blank" href="https://www.youtube.com/watch?v=GvXL-2UU99g"><div class="next_to shift_small" onmouseover="edit_drill('put your arms on your heal in breaststroke')">heal tag drill</div></a>
+    <a target="_blank" href="https://www.youtube.com/watch?v=mrW1QN44ZGQ"><div class="next_to" onmouseover="edit_drill('do 2 kick before doing breaststroke pull')">2 kick breast drill</div></a>a
+    <a target="_blank" href="https://www.youtube.com/watch?v=sudML0wp6Pw"><div class="next_to shift_small shift_normal" onmouseover="edit_drill('do breaststroke kick on back')">breaststroke kick on back</div></a>
 	<h3> Backstroke </h3>
     <div class="next_to shift_big" onmouseover="edit_drill('do backstroke pull with a buoy')">backstroke pull(with buoy)</div>
     <div class="next_to shift_small" onmouseover="edit_drill('do backstroke under water')">under water backstroke</div>
