--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   <p class="current_drill" id="drill_information">about the drill</p>
 
   <footer style="clear:left; color:white; text-align:center;">
-  Credits to Myswimpro, Fares Ksebati, SwimLifeGuru, and Jarasport
+  Credits to Myswimpro, Fares Ksebati, SwimLifeGuru, Jarasport, and GoSwim
   </footer>
   <script>
     document.getElementById("text").innerText = 'Your set:';
