--- a/index.html
+++ b/index.html
@@ -135,13 +135,14 @@
     .current_drill {
     	visibility:hidden;
     }
-    #drills:hover + p {
-    	visibility:visible;
-    }
+    
     @media (min-width:1400px) {
 	    .current_drill {
             width:15vw;
 	    }
+        #drills:hover + p {
+    	visibility:visible;
+    }
     }
   </style>
 </head>
@@ -190,7 +191,7 @@
   <p class="current_drill" id="drill_information">about the drill</p>
 
   <footer style="clear:left; color:white; text-align:center;">
-  Credits to Myswimpro, Fares Ksebati, SwimLifeGuru, Jarasport, and GoSwim
+  Credits to Myswimpro, Fares Ksebati, SwimLifeGuru, and Jarasport
   </footer>
   <script>
     document.getElementById("text").innerText = 'Your set:';
